Исправлена обработка ошибок (возврат пустого списка вместо null), метод getPublicEvents (добавлена фильтрация событий в памяти)